# m2adf

./: .python-version  LICENSE  README.md  pyproject.toml  setup.py
md2adf/: __init__.py  converter.py
tests/: test_converter.py
