[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "md2adf"
version = "0.1.0"
description = "Convert Markdown to Atlassian Document Format (ADF)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = [
    "mistune>=3.0,<4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
include = ["md2adf*"]
